syntax = "proto3";
package management;
import "management/migration.proto";
import "management/data_transformation.proto";

service ProjectionsService {
	rpc RegisterMigration(ProjectionsRegisterMigrationRequest) returns (ProjectionsRegisterMigrationResponse); 
	rpc StartMigration(ProjectionsStartMigrationRequest) returns (ProjectionsStartMigrationResponse); 
	rpc FinishMigration(ProjectionsFinishMigrationRequest) returns (ProjectionsFinishMigrationResponse);
	rpc RollbackMigration(ProjectionsRollbackMigrationRequest) returns (ProjectionsRollbackMigrationResponse);
	rpc GetMigrationStatus(ProjectionsGetMigrationStatusRequest) returns (ProjectionsGetMigrationStatusResponse);
	rpc DataTransformation(stream ProjectionsDataTransformationRequest) returns (stream ProjectionsDataToTransform);
}
